# cdn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: constants.rs  database.rs  environment.rs  errors.rs  files.rs  main.rs  metadata.rs  scraper.rs  stores.rs  utilities.rs
src/routes/: download.rs  embed.rs  mod.rs  proxy.rs  serve.rs  service.rs  upload.rs
