[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures = "0.3.28"

dotenv = "0.15.0"
toml = "0.8.12"

log = "0.4.21"
env_logger = "0.11.3"
ulid = "1.1.2"

lazy_static = "1.4.0"
once_cell = "1.19.0"

mongodb = "2.8.2"
rust-s3 = "0.33.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.115"
validator = { version = "0.17.0", features = ["derive"] }

actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-multipart = "0.6.1"

webp = "0.2.5"
image = "0.25.0"
imagesize = "0.12.0"
ffprobe = "0.3.3"
tempfile = "3.10.1"
tree_magic_mini = "3.1.4"
content_inspector = "0.2.4"

reqwest = "0.12.2"
scraper = "0.19.0"
youtubei-rs = "1.3.5"
mime = "0.3.17"
regex = "1.10.4"
