[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures = "0.3.30"

dotenv = "0.15.0"
toml = "0.8.0"

log = "0.4.20"
env_logger = "0.11.0"
ulid = "1.0.0"

lazy_static = "1.4.0"
once_cell = "1.18.0"

mongodb = "3.0.0"
rust-s3 = "0.35.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
validator = { version = "0.19.0", features = ["derive"] }

actix-web = "4.3.1"
actix-cors = "0.7.0"
actix-files = "0.6.2"
actix-multipart = "0.7.0"

webp = "0.3.0"
image = "0.25.0"
imagesize = "0.13.0"
ffprobe = "0.4.0"
tempfile = "3.7.1"
tree_magic_mini = "3.0.3"
content_inspector = "0.2.4"

reqwest = "0.12.0"
scraper = "0.22.0"
youtubei-rs = "1.3.5"
mime = "0.3.17"
regex = "1.9.3"
